addressed TODO. fixed the number of drops when # of rounds is small (Closes #7)

--- a/conf/webapp.default.conf
+++ b/conf/webapp.default.conf
@@ -1,3 +1,4 @@
-# Example webapp configuration
+# Example web app configuration
+SERVER_NAME = 'localhost:4567'
 DEBUG = True
 SECRET_KEY = 'secret'
