fixed misspellings in team drivers

--- a/conf/season-2015.json
+++ b/conf/season-2015.json
@@ -76,7 +76,7 @@
                 "Craig Francis"
             ],
             "INTERGALACTIC KART MONKEYS - GRANSTAND": [
-                "Bill Krieg",
+                "Bill Kreig",
                 "Jake Hood",
                 "Scott Kennedy"
             ],
@@ -118,7 +118,7 @@
             "RNA - TARGA FLORIO": [
                 "Rene Hourian",
                 "Adam Nagao",
-                "Victor Pinieros"
+                "Victor Pineiros"
             ],
             "SCARED FAST": [
                 "Jason Lighthart",
@@ -137,7 +137,7 @@
             ],
             "T4 JUSTICE": [
                 "Andrew Brown",
-                "Caylee Burgan",
+                "Caylee Britain",
                 "Taylor Hays"
             ],
             "T4 LA PANDA": [
