--- a/conf/config.json
+++ b/conf/config.json
@@ -17,6 +17,10 @@
         {
             "season_year": 2015,
             "season_file": "conf/season-2015.json"
+        },
+        {
+            "season_year": 2016,
+            "season_file": "conf/season-2016.json"
         }
     ]
 
