--- a/conf/config.json
+++ b/conf/config.json
@@ -21,6 +21,10 @@
         {
             "season_year": 2016,
             "season_file": "conf/season-2016.json"
+        },
+        {
+            "season_year": 2017,
+            "season_file": "conf/season-2017.json"
         }
     ]
 
