date/time fix; data retrieval by key

--- a/conf/season-2017.json
+++ b/conf/season-2017.json
@@ -1,6 +1,7 @@
 {
-    "season_year": 2017, 
+    "season_year": 2017,
     "season_data": {
+        "key": "Grand Prix", 
 
         "total_rounds": 10,
 
